--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <title>Keyan Kazemian</title>
 
+  <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
