compressed images and more

--- a/index.html
+++ b/index.html
@@ -449,16 +449,16 @@
                 <p>Websites I've helped make for clients.</p>
                 <hr class="light">
                 <div class="portfolio-item">
-                  <a id="portfolio" class="portfolio-link" href="http://neginartstudio.org" target="_blank">
+                  <a id="portfolio" class="portfolio-link" href="http://americanexposures.com" target="_blank">
                     <div class="portfolio-hover">
                       <div class="portfolio-hover-content">
                         <i class="fa fa-plus fa-3x"></i>
                       </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/web/neginartstudio.jpg" alt="">
+                    <img class="img-fluid" src="img/portfolio/web/amex.jpg" alt="">
                   </a>
                 </div>
-                <p>neginartstudio.org</p>
+                <p>americanexposures.com</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
