changed the project image

--- a/index.html
+++ b/index.html
@@ -107,6 +107,32 @@
       </div>
       <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fa fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/web.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>WEB DESIGN</h4>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fa fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/project.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>PROJECTS</h4>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -156,32 +182,6 @@
           </a>
           <div class="portfolio-caption">
             <h4>MUSIC</h4>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/web.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>WEB DESIGN</h4>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/project.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>PROJECTS</h4>
           </div>
         </div>
       </div>
@@ -487,7 +487,7 @@
                 <h2 class="text-uppercase">Software Projects</h2>
                 <p>What I'm currently working on.</p>
                 <hr class="light">
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/project/lokey.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/project/lokey.png" alt="">
                 <p>lo-key is currently under construction...<br/><br/>In a nutshell, lo-key is an application that helps shed light on smaller and more undiscovered artists. Using the Spotify Web Api, Lo-Key allows the user to input their favorite artist
                   and receive a list of similar yet "low key" artists.<br/><br/>It is my strong belief that in today's society, the majority of the population listens to a select number of regurgitated musicians. Unfortunately, this means that there is
                   a plethora of popular artists of yesterday and unpopular artists of today that are constantly being slept on.<br/><br/>lo-key hopes to change that.</p>
