updated some general phil

--- a/index.html
+++ b/index.html
@@ -89,8 +89,17 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large">Hello! My name's Keyan Kazemian and I'm currently a student studying computer science.<br><br>Besides software development and web design, I happen to dabble in photography, film, and music production. All pictures on this website are my photography.
-              My latest work can be found in the portfolio modules below.<br><br>Please feel free to contact me at kazemiankeyan@gmail.com or through any of my socials linked below. Thanks for visiting!</p>
+            <p class="large">Hello! My name's Keyan Kazemian and I'm currently a student studying computer science.<br><br>
+              Although I'm an engineer, I happen to dabble in photography, film, and music production.
+              You see, the stereotype is that most engineers tend to come in the shape and form of pragmatic, introverted, science and math loving people who lack the creative minds of artists.
+              While this is definitely not always true, I strive to help break this misconception. Being someone who views my major of choice, Computer Science, as heavily based in both art and science,
+              I think it is imperative that software engineers bust the myths that surround them. Infact, if we think back to the Italian Renassiance, the artist and the engineer were not so far apart.
+              In many cases they were actually one in the same.
+              That is why I sincerely believe that the holistic engineering student with addtional background in the arts will better accommodate and design for the human condition.
+              While this may not seem like such a radical idea, unfortunately, in today's higher education system, STEM and art majors are actually viewed quite differently.
+              Collaboration between the two is rare and individuals who pursue both even more scarce.
+              At the moment, although I am just a student looking for opportunities where I can further discover and apply my skills, I try to merge my art and my engineering work as often as possible.
+  <br><br>Please feel free to contact me at kazemiankeyan@gmail.com or through any of my socials linked below. Thanks for visiting!</p>
           </div>
         </div>
       </div>
@@ -489,8 +498,9 @@
                 <hr class="light">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/project/lokey.png" alt="">
                 <p>lo-key is currently under construction...<br/><br/>In a nutshell, lo-key is an application that helps shed light on smaller and more undiscovered artists. Using the Spotify Web Api, Lo-Key allows the user to input their favorite artist
-                  and receive a list of similar yet "low key" artists.<br/><br/>It is my strong belief that in today's society, the majority of the population listens to a select number of regurgitated musicians. Unfortunately, this means that there is
-                  a plethora of popular artists of yesterday and unpopular artists of today that are constantly being slept on.<br/><br/>lo-key hopes to change that.</p>
+                  and receive a list of similar yet "low key" artists.<br/><br/>It is my strong belief that in today's society, the majority of the population listens to a select number of regurgitated musicians. And while there are those who look for new music, the algorithms of popular music streaming services, keep users in an echo chamber that only promotes artists with high followings. Unfortunately, this means that there is
+                  a plethora of popular artists of yesterday and unpopular artists of today that are constantly being slept on. This makes it very difficult for under represented artists to break through the glass ceiling.
+<br/><br/>lo-key hopes to change that.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
