changed photo again

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/project.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/project.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>PROJECTS</h4>
