--- a/index.html
+++ b/index.html
@@ -89,16 +89,9 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large">Hello! My name's Keyan Kazemian and I'm currently a student studying computer science.<br><br>
-              Although I'm an engineer, I happen to dabble in photography, film, and music production.
-              You see, the stereotype is that most engineers tend to come in the shape and form of pragmatic, introverted, science and math loving people who lack the creative minds of artists.
-              While this is definitely not always true, I strive to help break this misconception. Being someone who views my major of choice, Computer Science, as heavily based in both art and science,
-              I think it is imperative that software engineers bust the myths that surround them. Infact, if we think back to the Italian Renassiance, the artist and the engineer were not so far apart.
-              In many cases they were actually one in the same.
-              That is why I sincerely believe that the holistic engineering student with addtional background in the arts will better accommodate and design for the human condition.
-              While this may not seem like such a radical idea, unfortunately, in today's higher education system, STEM and art majors are actually viewed quite differently.
-              Collaboration between the two is rare and individuals who pursue both even more scarce.
-              At the moment, although I am just a student looking for opportunities where I can further discover and apply my skills, I try to merge my art and my engineering work as often as possible.
+            <p class="large">Hello! My name's Keyan Kazemian and I'm currently a student studying computer science and engineering at UCI.<br><br>
+              I'm passionate about the intersection of technology and psychology, the applications of automation in the current market, and investing in ideas that make a tangible impact on the world around me.
+              Although I'm an engineer, I happen to also dabble in photography, film, and music production. You can find my work below.
   <br><br>Please feel free to contact me at kazemiankeyan@gmail.com or through any of my socials linked below. Thanks for visiting!</p>
           </div>
         </div>
