--- a/index.html
+++ b/index.html
@@ -508,12 +508,14 @@
   </div>
 
   <div id="typed-strings">
-    <p>I am an artist.</p>
-    <p>A software developer.</p>
-    <p>I play the piano and the electric guitar.</p>
-    <p>I enjoy making films.</p>
-    <p>I'm a student.</p>
-    <p>I'm a photographer.</p>
+    <p>Artist</p>
+    <p>Software Engineer</p>
+    <p>Ameteur Music Creator</p>
+    <p>Occasional Filmmaker</p>
+    <p>Student</p>
+    <p>Playlist Curator</p>
+    <p>Photographer</p>
+    <p>Philosophy Enthusiast</p>
   </div>
 
   <!-- Bootstrap core JavaScript -->
