--- a/index.html
+++ b/index.html
@@ -288,7 +288,6 @@
                 <hr class="light">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/1.jpg" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/2.jpg" alt="">
-
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/3.jpg" alt="">
 
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/4.jpg" alt="">
@@ -308,6 +307,26 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/11.jpg" alt="">
 
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/12.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/13.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/14.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/15.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/16.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/17.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/18.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/19.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/20.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/21.jpg" alt="">
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/digital/22.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -344,7 +363,19 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/film/5.jpg" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/film/6.jpg" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/film/7.jpg" alt="">
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/8.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/9.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/10.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/11.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/12.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/13.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/14.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/15.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/16.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/17.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/18.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/19.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/20.jpg" alt="">
+
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
