--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/web.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/project.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>WEB DESIGN</h4>
+            <h4>LO-KEY</h4>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -128,7 +128,7 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/project.png" alt="">
+            <img class="img-fluid" src="img/portfolio/web.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>PROJECTS</h4>
@@ -368,7 +368,10 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/film/18.jpg" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/film/19.jpg" alt="">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/film/20.jpg" alt="">
-
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/21.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/22.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/23.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/film/24.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -454,7 +457,7 @@
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/354153431&color=%2327473c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/291734063&color=%2327473c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/617721879&color=%2327473c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/679400790&color=%2327473c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>   
+                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/679400790&color=%2327473c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
@@ -467,7 +470,7 @@
   </div>
 
   <!-- Modal 5 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -480,20 +483,36 @@
             <div class="col-lg-8 mx-auto">
               <div id="portfolio" class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Web Design</h2>
-                <p>Websites I've helped make for clients.</p>
+                <h2 class="text-uppercase">current ventures</h2>
+                <p>What I'm working on at the moment.</p>
                 <hr class="light">
-                <div class="portfolio-item">
-                  <a id="portfolio" class="portfolio-link" href="http://americanexposures.com" target="_blank">
+                <h3 class="text-uppercase">bridge</h3>
+                <!-- <div class="portfolio-item">
+                  <a id="portfolio" class="portfolio-link" href="https://bridge-co.github.io/" target="_blank">
                     <div class="portfolio-hover">
                       <div class="portfolio-hover-content">
                         <i class="fa fa-plus fa-3x"></i>
                       </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/web/amex.jpg" alt="">
+                    <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
                   </a>
-                </div>
-                <p>americanexposures.com</p>
+                </div> -->
+                <p>Bridge is a startup focused on exploring how technology can be used as a net positive for human connection and mental health. We're creating a platform that fosters genuine connections and encourages real life human interactions. Bridge will be launching soon.
+                  <br/><br/>Here's the landing page for Bridge: <br/><a href="https://bridge-co.github.io/">www.bridge-co.github.io</a><br/><br/></p>
+                <hr class="light">
+                <h3 class="text-uppercase">california crescent fund</h3>
+                <!-- <div class="portfolio-item">
+                  <a id="portfolio" class="portfolio-link" href="http://californiacrescent.fund/" target="_blank">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fa fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
+                  </a>
+                </div> -->
+                <p>We're happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California. We are currently in the process of launching.
+                <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/">www.californiacrescent.fund</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
@@ -506,7 +525,7 @@
   </div>
 
   <!-- Modal 6 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -519,11 +538,11 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Software Projects</h2>
-                <p>What I'm currently working on.</p>
+                <h2 class="text-uppercase">Lo-Key</h2>
+                <p>A music finding application.</p>
                 <hr class="light">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/project/lokey.png" alt="">
-                <p>lo-key is currently under construction...<br/><br/>lo-key can be found @ <br/><a href="http://lo-key.azurewebsites.net/">www.lo-key.azurewebsites.net/</a><br/><br/>In a nutshell, lo-key is an application that helps shed light on smaller and more undiscovered artists. Using the Spotify Web Api, Lo-Key allows the user to input their favorite artist
+                <p>lo-key is currently under construction...<br/><br/>lo-key can be found @ <br/><a href="http://lo-key.io/">www.lo-key.io</a><br/><br/>In a nutshell, lo-key is an application that helps shed light on smaller and more undiscovered artists. Using the Spotify Web Api, Lo-Key allows the user to input their favorite artist
                   and receive a list of similar yet "low key" artists.<br/><br/>It is my strong belief that in today's society, the majority of the population listens to a select number of regurgitated musicians. And while there are those who look for new music, the algorithms of popular music streaming services, keep users in an echo chamber that only promotes artists with high followings. Unfortunately, this means that there is
                   a plethora of popular artists of yesterday and unpopular artists of today that are constantly being slept on. This makes it very difficult for under represented artists to break through the glass ceiling.
 <br/><br/>lo-key hopes to change that.</p>
