some small ui changes

--- a/index.html
+++ b/index.html
@@ -485,8 +485,9 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">current ventures</h2>
                 <p>What I'm working on at the moment.</p>
-                <hr class="light">
                 <h3 class="text-uppercase">bridge</h3>
+                <hr class="light">
+                <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
                 <!-- <div class="portfolio-item">
                   <a id="portfolio" class="portfolio-link" href="https://bridge-co.github.io/" target="_blank">
                     <div class="portfolio-hover">
@@ -499,8 +500,9 @@
                 </div> -->
                 <p>Bridge is a startup focused on exploring how technology can be used as a net positive for human connection and mental health. We're creating a platform that fosters genuine connections and encourages real life human interactions. Bridge will be launching soon.
                   <br/><br/>Here's the landing page for Bridge: <br/><a href="https://bridge-co.github.io/">www.bridge-co.github.io</a><br/><br/></p>
-                <hr class="light">
                 <h3 class="text-uppercase">california crescent fund</h3>
+                <hr class="light">
+                <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
                 <!-- <div class="portfolio-item">
                   <a id="portfolio" class="portfolio-link" href="http://californiacrescent.fund/" target="_blank">
                     <div class="portfolio-hover">
@@ -511,7 +513,7 @@
                     <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
                   </a>
                 </div> -->
-                <p>We're happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California. We are currently in the process of launching.
+                <p>We're happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
                 <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/">www.californiacrescent.fund</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
