--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                   </a>
                 </div> -->
                 <p>Bridge is a startup focused on exploring how technology can be used as a net positive for human connection and mental health. We're creating a platform that fosters genuine connections and encourages real life human interactions. Bridge will be launching soon.
-                  <br/><br/>Here's the landing page for Bridge: <br/><a href="https://bridge-co.github.io/">www.bridge-co.github.io</a><br/><br/></p>
+                  <br/><br/>Here's the landing page for Bridge: <br/><a href="https://bridge-co.github.io/" target="_blank">www.bridge-co.github.io</a><br/><br/></p>
                 <h3 class="text-uppercase">california crescent fund</h3>
                 <hr class="light">
                 <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
@@ -513,8 +513,8 @@
                     <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
                   </a>
                 </div> -->
-                <p>We're happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
-                <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/">www.californiacrescent.fund</a><br/><br/></p>
+                <p>I'm happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
+                <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/" target="_blank">www.californiacrescent.fund</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
