--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                 <p>A music finding application.</p>
                 <hr class="light">
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/project/lokey.png" alt="">
-                <p>lo-key is currently under construction...<br/><br/>lo-key can be found @ <br/><a href="http://lo-key.io/">www.lo-key.io</a><br/><br/>In a nutshell, lo-key is an application that helps shed light on smaller and more undiscovered artists. Using the Spotify Web Api, Lo-Key allows the user to input their favorite artist
+                <p>lo-key is currently under construction...<br/><br/>lo-key can be found @ <br/><a href="http://lo-key.io/" target="_blank">www.lo-key.io</a><br/><br/>In a nutshell, lo-key is an application that helps shed light on smaller and more undiscovered artists. Using the Spotify Web Api, Lo-Key allows the user to input their favorite artist
                   and receive a list of similar yet "low key" artists.<br/><br/>It is my strong belief that in today's society, the majority of the population listens to a select number of regurgitated musicians. And while there are those who look for new music, the algorithms of popular music streaming services, keep users in an echo chamber that only promotes artists with high followings. Unfortunately, this means that there is
                   a plethora of popular artists of yesterday and unpopular artists of today that are constantly being slept on. This makes it very difficult for under represented artists to break through the glass ceiling.
 <br/><br/>lo-key hopes to change that.</p>
