--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
   <div id="typed-strings">
     <p>Artist</p>
     <p>Software Engineer</p>
-    <p>Ameteur Music Creator</p>
+    <p>Amateur Music Producer</p>
     <p>Occasional Filmmaker</p>
     <p>Student</p>
     <p>Playlist Curator</p>
