--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <p class="large">Hey there! I'm a product-focused engineer studying computer science and engineering at UCI.<br><br>
-              I'm passionate about the intersection of technology and psychology, the applications of automation in the current market, and investing in ideas that make a tangible impact on the world around me.
-                 In my free time, I love to curate new playlists. Shameless plug right <a target="_blank" href="https://open.spotify.com/user/kaaazemian?si=DaF-7gg_SMC22T1LbvRJXQ">here</a>. Although I'm an engineer, I happen to also occasionally dabble in photography, film, and music production. You can find my work below.
+              I'm passionate about building and scaling products, investing in ideas that make a tangible impact on the world around me, social network analysis, and the intersection of computer science and psychology.
+                 In my free time, I love to curate new playlists. Shameless plug right here: <a target="_blank" href="https://open.spotify.com/user/kaaazemian?si=DaF-7gg_SMC22T1LbvRJXQ">my spotify</a>. Although I'm an engineer, I happen to also occasionally dabble in photography, film, and music production. You can find my work below.
   <br><br>Send me an email at kazemiankeyan@gmail.com or find me at any of my socials linked below. Thanks for visiting!</p>
           </div>
         </div>
