updated resume and included product @ uci

--- a/index.html
+++ b/index.html
@@ -515,6 +515,21 @@
                 </div> -->
                 <p>I'm happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
                 <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/" target="_blank">www.californiacrescent.fund</a><br/><br/></p>
+                <h3 class="text-uppercase">product @ uci</h3>
+                <hr class="light">
+                <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
+                <!-- <div class="portfolio-item">
+                  <a id="portfolio" class="portfolio-link" href="http://californiacrescent.fund/" target="_blank">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fa fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
+                  </a>
+                </div> -->
+                <p>As a co-founder and the VP of engineering, I'm helping build Product @ UCI. We're the first organization on campus focused on fostering a community of passionate students in product through speaker events, workshops, and a two quarter long fellowship.
+                <br/><br/>More information about Product @ UCI can be found here:<br/><a href="http://productuci.com/" target="_blank">www.productuci.com</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
