changed a quick tidbit

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                   </a>
                 </div> -->
                 <p>As a co-founder and the VP of engineering, I'm helping build Product @ UCI. We're the first organization on campus focused on fostering a community of passionate students in product through speaker events, workshops, and a two quarter long fellowship.
-                <br/><br/>More information about Product @ UCI can be found here:<br/><a href="http://productuci.com/" target="_blank">www.productuci.com</a><br/><br/></p>
+                <br/><br/>Learn more about Product @ UCI here:<br/><a href="http://productuci.com/" target="_blank">www.productuci.com</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
