--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/" target="_blank">www.californiacrescent.fund</a><br/><br/></p>
                 <h3 class="text-uppercase">product @ uci</h3>
                 <hr class="light">
-                <img class="img-fluid" src="img/portfolio/web/logo.png" alt="">
+                <img class="img-fluid project-image" src="img/portfolio/web/logo.ico" alt="">
                 <!-- <div class="portfolio-item">
                   <a id="portfolio" class="portfolio-link" href="http://californiacrescent.fund/" target="_blank">
                     <div class="portfolio-hover">
