new icon for crescent

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                   <br/><br/>Here's the landing page for Bridge: <br/><a href="https://bridge-co.github.io/" target="_blank">www.bridge-co.github.io</a><br/><br/></p>
                 <h3 class="text-uppercase">california crescent fund</h3>
                 <hr class="light">
-                <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
+                <img class="img-fluid project-image1" src="img/portfolio/web/icon.png" alt="">
                 <!-- <div class="portfolio-item">
                   <a id="portfolio" class="portfolio-link" href="http://californiacrescent.fund/" target="_blank">
                     <div class="portfolio-hover">
