--- a/index.html
+++ b/index.html
@@ -485,21 +485,6 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">current ventures</h2>
                 <p>What I'm working on at the moment.</p>
-                <h3 class="text-uppercase">bridge</h3>
-                <hr class="light">
-                <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
-                <!-- <div class="portfolio-item">
-                  <a id="portfolio" class="portfolio-link" href="https://bridge-co.github.io/" target="_blank">
-                    <div class="portfolio-hover">
-                      <div class="portfolio-hover-content">
-                        <i class="fa fa-plus fa-3x"></i>
-                      </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
-                  </a>
-                </div> -->
-                <p>Bridge is a startup focused on exploring how technology can be used as a net positive for human connection and mental health. We're creating a platform that fosters genuine connections and encourages real life human interactions. Bridge will be launching soon.
-                  <br/><br/>Here's the landing page for Bridge: <br/><a href="https://bridge-co.github.io/" target="_blank">www.bridge-co.github.io</a><br/><br/></p>
                 <h3 class="text-uppercase">california crescent fund</h3>
                 <hr class="light">
                 <img class="img-fluid project-image1" src="img/portfolio/web/icon.png" alt="">
@@ -515,7 +500,7 @@
                 </div> -->
                 <p>I'm happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
                 <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/" target="_blank">www.californiacrescent.fund</a><br/><br/></p>
-                <h3 class="text-uppercase">product @ uci</h3>
+                <h3 class="text-uppercase">product association/h3>
                 <hr class="light">
                 <img class="img-fluid project-image" src="img/portfolio/web/logo.ico" alt="">
                 <!-- <div class="portfolio-item">
@@ -528,8 +513,23 @@
                     <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
                   </a>
                 </div> -->
-                <p>As a co-founder and the VP of engineering, I'm helping build Product @ UCI. We're the first organization on campus focused on fostering a community of passionate students in product through speaker events, workshops, and a two quarter long fellowship.
-                <br/><br/>Learn more about Product @ UCI here:<br/><a href="http://productuci.com/" target="_blank">www.productuci.com</a><br/><br/></p>
+                <p>As a co-founder and the VP of engineering, I'm helping build UCI's first ever student-run product incubator. We host career workshops, speaker events, and a two quarter fellowship where students take a product from ideation to launch.
+                <br/><br/>Learn more about Product Assocation here:<br/><a href="http://productuci.com/" target="_blank">www.productuci.com</a><br/><br/></p>
+                <h3 class="text-uppercase">the serendipity project</h3>
+                <hr class="light">
+                <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
+                <!-- <div class="portfolio-item">
+                  <a id="portfolio" class="portfolio-link" href="https://bridge-co.github.io/" target="_blank">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fa fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
+                  </a>
+                </div> -->
+                <p>TSP is a research project focused on exploring how technology can be used as a net positive for human connection and mental health. We're looking to answer the question: can we predict initial connection among a group of strangers based on a set of overlapping traits? TSP will be launching soon.
+                  <br/><br/>Here's the landing page for The Serendipity Project: <br/><a href="https://theserendipityproject.github.io/" target="_blank">www.theserendipityproject.github.io</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
