--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 </div> -->
                 <p>I'm happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
                 <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/" target="_blank">www.californiacrescent.fund</a><br/><br/></p>
-                <h3 class="text-uppercase">product association/h3>
+                <h3 class="text-uppercase">product association</h3>
                 <hr class="light">
                 <img class="img-fluid project-image" src="img/portfolio/web/logo.ico" alt="">
                 <!-- <div class="portfolio-item">
