--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
                   </a>
                 </div> -->
-                <p>I'm happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of partners at top universities focused on growing the student startup ecosystem in Southern California.
+                <p>I'm happy to announce that we're launching UCI's first student-run VC fund. The California Crescent Fund is a student-run network of university partners focused on growing the student startup ecosystem in Southern California.
                 <br/><br/>More information about Crescent can be found @ <br/><a href="http://californiacrescent.fund/" target="_blank">www.californiacrescent.fund</a><br/><br/></p>
                 <h3 class="text-uppercase">product association</h3>
                 <hr class="light">
