--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     <img class="img-fluid" src="img/portfolio/web/icon.png" alt="">
                   </a>
                 </div> -->
-                <p>I'm happy to announce that we've launched SoCal's first student-run VC fund. The California Crescent Fund is a student-run network of university partners focused on growing the student startup ecosystem in Southern California.
+                <p>We're raising a million dollars to invest in Southern California student founders. Crescent Fund is a student-run venture fund of university partners focused on growing the student startup ecosystem in SoCal.
                 <br/><br/>More information about Crescent can be found @ <br/><a href="https://www.crescentfund.vc/" target="_blank">www.crescentfund.vc</a><br/><br/></p>
                 <h3 class="text-uppercase">product association</h3>
                 <hr class="light">
@@ -515,9 +515,9 @@
                 </div> -->
                 <p>As a co-founder and the VP of engineering, I'm helping build UCI's first ever student-run product incubator. We host career workshops, speaker events, and a two quarter fellowship where students take a product from ideation to launch.
                 <br/><br/>Learn more about Product Assocation here:<br/><a href="http://productuci.com/" target="_blank">www.productuci.com</a><br/><br/></p>
-                <h3 class="text-uppercase">the serendipity project</h3>
+                <h3 class="text-uppercase">222 (the serendipity project)</h3>
                 <hr class="light">
-                <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
+                <img width="128" class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
                 <!-- <div class="portfolio-item">
                   <a id="portfolio" class="portfolio-link" href="https://bridge-co.github.io/" target="_blank">
                     <div class="portfolio-hover">
@@ -528,8 +528,8 @@
                     <img class="img-fluid" src="img/portfolio/web/icon1.png" alt="">
                   </a>
                 </div> -->
-                <p>TSP is a research project focused on exploring how technology can be used as a net positive for human connection and mental health. We're looking to answer the question: can we predict initial connection among a group of strangers based on a set of overlapping traits? TSP will be launching soon.
-                  <br/><br/>Here's the landing page for The Serendipity Project: <br/><a href="https://theserendipityproject.github.io/" target="_blank">www.theserendipityproject.github.io</a><br/><br/></p>
+                <p>222 is a research project focused on exploring how technology can be used as a net positive for human connection and mental health. We're looking to answer the question: can we predict initial connection among a group of strangers based on a set of overlapping traits? 222 will be launching soon.
+                  <br/><br/>Here's the landing page for 222: <br/><a href="https://222.place" target="_blank">www.222.place</a><br/><br/></p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Module</button>
@@ -577,6 +577,7 @@
   <div id="typed-strings">
     <p>Artist</p>
     <p>Software Engineer</p>
+    <p>Product Manager</p>
     <p>Amateur Music Producer</p>
     <p>Occasional Filmmaker</p>
     <p>Student</p>
