--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <!-- Keyan Kazemian Website
      Creator: Keyan Kazemian
      Date: 8/9/2018
-     All Rights Reserved -->
+     All Rights Reserved
+     deprecated :( - 12/8/2022
+   -->
 
 <head>
 
